--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h2 class="text-xl font-semibold mb-4 text-center">We’re sorry! Tell us how to improve.</h2>
 
       <form id="feedbackForm"
-            action="https://formsubmit.co/[email protected]"
+            action="https://formsubmit.co/equimedia3@gmail.com"
             method="POST"
             class="space-y-4">
         <textarea name="message" rows="5"
