--- a/index.html
+++ b/index.html
@@ -75,38 +75,24 @@
       <button class="absolute top-2 right-3 text-xl leading-none text-gray-500 hover:text-gray-700" data-close>&times;</button>
 
       <h2 class="text-xl font-semibold mb-4 text-center">We’re sorry! Tell us how to improve.</h2>
+<form id="feedbackForm"
+      action="https://formsubmit.co/equimedia3@gmail.com"
+      method="POST" class="space-y-4">
 
-      <form id="feedbackForm"
-            action="https://formsubmit.co/equimedia3@gmail.com"
-            method="POST"
-            class="space-y-4">
-        <textarea name="message" rows="5"
-                  class="w-full border rounded shadow-sm px-4 py-2 focus:outline-none focus:ring-1 focus:ring-blue-500"
-                  placeholder="Your feedback helps us get better..."></textarea>
+  <textarea name="message" rows="5" placeholder="Your feedback…"></textarea>
 
-        <!-- 📧 reply‑to address (optional) -->
-        <input type="email" name="email" placeholder="Your email (optional)"
-               class="w-full border rounded shadow-sm px-4 py-2">
+  <input type="email" name="email" placeholder="Your email (optional)">
 
-        <!-- FormSubmit helpers -->
-        <input type="hidden" name="_subject" value="Low Rating Feedback (Website)">
-        <input type="hidden" name="_template" value="table">
-        <!-- KEEP reCAPTCHA! -->
-        <!--<input type="hidden" name="_captcha" value="false">-->
+  <!-- helpers -->
+  <input type="hidden" name="_subject" value="Low Rating Feedback (Website)">
+  <input type="hidden" name="_template" value="table">
+  <input type="hidden" name="_next" value="https://yourdomain.com/thanks.html">
+  <!-- bot traps -->
+  <input type="text"   name="_honey"  style="display:none">
 
-        <!-- Honeypot (spam trap) -->
-        <input type="text" name="_honey" style="display:none">
+  <button type="submit">Send Feedback</button>
+</form>
 
-        <!-- Custom thank‑you page (optional) -->
-        <input type="hidden" name="_next" value="https://yourdomain.com/thanks.html">
-
-        <button type="submit"
-                class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 rounded-lg transition active:scale-95">
-          Send Feedback
-        </button>
-
-        <p id="feedMsg" class="text-center text-sm text-gray-600"></p>
-      </form>
     </div>
   </div>
 
