--- a/index.html
+++ b/index.html
@@ -5,136 +5,112 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rate Your Experience</title>
 
-  <!-- Tailwind CSS CDN → quick, no build‑step needed -->
+  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Inter font (clean professional look) -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <!-- Inter font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
-    /* use Inter everywhere */
-    body { font-family: "Inter", sans-serif; }
+    body{font-family:'Inter',sans-serif;}
 
-    /* ------------- stars ------------- */
-    .stars {
-      display: flex;
-      flex-direction: row-reverse;
-      justify-content: center;
-      gap: .35rem;
-    }
-    .stars input { display: none; }
-    .stars label {
-      font-size: 2.5rem;
-      cursor: pointer;
-      color: #d1d5db; /* gray‑300 */
-      transition: color 0.25s;
-      user-select: none;
-    }
-    /* hover states */
-    .stars label:hover,
-    .stars label:hover ~ label { color: #fcd34d;/*amber‑300*/ }
-    /* selected state */
-    .stars input:checked ~ label { color: #fbbf24;/*amber‑400*/ }
+    /* star control */
+    .star-set{display:flex;flex-direction:row-reverse;justify-content:center;gap:.25rem;margin:1rem 0;}
+    .star-set input{display:none}
+    .star-set label{font-size:2.1rem;cursor:pointer;color:#d1d5db;transition:color .25s}
+    .star-set label::before{content:'★'}
+    .star-set input:checked~label,
+    .star-set label:hover,
+    .star-set label:hover~label{color:#fbbf24}
 
-    /* ------------- modal ------------- */
-    .modal {
-      @apply fixed inset-0 flex items-center justify-center bg-black/60 backdrop-blur-sm z-50;
-    }
-    .modal.hidden { display: none; }
+    /* modal */
+    .backdrop{position:fixed;inset:0;background:rgba(0,0,0,.6);display:flex;align-items:center;justify-content:center;z-index:50;}
+    .hidden{display:none}
   </style>
 </head>
-<body class="min-h-screen flex items-center justify-center bg-gradient-to-br from-blue-50 via-white to-emerald-50 p-4">
+<body class="bg-slate-100 flex items-center justify-center min-h-screen p-4">
 
-  <!-- ─────────── Trigger card ─────────── -->
-  <div class="bg-white w-full max-w-md rounded-2xl shadow-xl p-8">
-    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi5ljGO5l3HYGTvCe-oeuAqZOhtK1eWSIG2H9t2H_twqIJgr9aYezagLnx0D-EQUGHOiu_aPeHJLDcC0i4UWizyvqUGTcTAXA2WcO1qd49FxslO5Np97Kl1AEAo8W9NZKhGLdmGVMmUPceDhfSZ62koGO0CJr64CuX-BFIfx1w8EuJnGOh4LbK4u46YACIW/w320-h207/rateus.png" alt="Rate us" class="w-40 mx-auto mb-4 select-none" />
+  <!-- Card -->
+  <div class="bg-white shadow-xl rounded-lg p-8 w-full max-w-md text-center">
+      <img src="https://raw.githubusercontent.com/tailwindlabs/heroicons/master/optimized/solid/star.svg" alt="Rate Us" class="w-16 h-16 mx-auto text-amber-400 mb-4" />
 
-    <h1 class="text-2xl font-semibold text-center text-sky-700 mb-2">How was your experience?</h1>
-    <p class="text-center text-gray-600 mb-6">Tap a star to let us know</p>
+      <h1 class="text-2xl font-semibold text-slate-800 mb-1">How was your experience?</h1>
+      <p class="text-slate-500 mb-6">Tap the stars below to rate us</p>
 
-    <!-- Stars → inline rating selection -->
-    <div id="starGroup" class="stars">
-      <input type="radio" id="s5" name="rating" value="5" /><label for="s5">★</label>
-      <input type="radio" id="s4" name="rating" value="4" /><label for="s4">★</label>
-      <input type="radio" id="s3" name="rating" value="3" /><label for="s3">★</label>
-      <input type="radio" id="s2" name="rating" value="2" /><label for="s2">★</label>
-      <input type="radio" id="s1" name="rating" value="1" /><label for="s1">★</label>
+      <div id="selector" class="star-set">
+        <input type="radio" id="s5" name="rating" value="5"><label for="s5"></label>
+        <input type="radio" id="s4" name="rating" value="4"><label for="s4"></label>
+        <input type="radio" id="s3" name="rating" value="3"><label for="s3"></label>
+        <input type="radio" id="s2" name="rating" value="2"><label for="s2"></label>
+        <input type="radio" id="s1" name="rating" value="1"><label for="s1"></label>
+      </div>
+  </div>
+
+  <!-- Positive modal -->
+  <div id="goodModal" class="backdrop hidden">
+    <div class="bg-white rounded-lg shadow-lg max-w-lg w-full p-8 relative">
+        <button class="absolute top-2 right-4 text-2xl leading-none text-slate-400 hover:text-slate-600" data-close>&times;</button>
+
+        <h2 class="text-xl font-semibold text-emerald-600 mb-2">We're glad you loved us!</h2>
+        <p class="text-slate-600 mb-6">Would you mind sharing your experience on Google?</p>
+
+        <div class="star-set pointer-events-none mb-6">
+            <label style="color:#fbbf24"></label><label style="color:#fbbf24"></label><label style="color:#fbbf24"></label><label style="color:#fbbf24"></label><label style="color:#fbbf24"></label>
+        </div>
+
+        <a href="https://search.google.com/local/writereview?placeid=ChIJ1b_GBgC3wjsR9t-a4dIKlI4" target="_blank" rel="noopener noreferrer" class="block w-full bg-emerald-500 hover:bg-emerald-600 text-white font-semibold py-3 rounded-lg transition active:scale-95">Write a Google Review</a>
     </div>
   </div>
 
-  <!-- ─────────── Positive‑rating modal ─────────── -->
-  <div id="modalGood" class="modal hidden">
-    <div class="bg-white rounded-xl shadow-lg w-full max-w-lg p-8 relative">
-      <button data-close class="absolute top-2 right-3 text-2xl font-light text-gray-400 hover:text-gray-600">&times;</button>
+  <!-- Negative modal -->
+  <div id="badModal" class="backdrop hidden">
+      <div class="bg-white rounded-lg shadow-lg max-w-lg w-full p-8 relative">
+          <button class="absolute top-2 right-4 text-2xl leading-none text-slate-400 hover:text-slate-600" data-close>&times;</button>
 
-      <h2 class="text-xl font-semibold text-center text-emerald-600 mb-2">Thank you for the love! ⭐</h2>
-      <p class="text-center text-gray-600 mb-6">Could you share a public review on Google?</p>
+          <h2 class="text-xl font-semibold text-rose-600 mb-2">We're sorry to hear that!</h2>
+          <p class="text-slate-600 mb-4">Please let us know how we can improve:</p>
 
-      <a href="https://search.google.com/local/writereview?placeid=ChIJ1b_GBgC3wjsR9t-a4dIKlI4" target="_blank" rel="noopener noreferrer" class="block bg-emerald-500 hover:bg-emerald-600 text-white font-medium text-center py-3 rounded-lg active:scale-95 transition transform">Write a Google review</a>
+          <form id="fbForm" action="https://formsubmit.co/equimedia3@gmail.com" method="POST" class="space-y-4">
+              <textarea name="message" rows="5" class="w-full border rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-slate-400" placeholder="Your feedback..."></textarea>
 
-      <p class="mt-4 text-xs text-center text-gray-400">(Opens in a new tab)</p>
-    </div>
+              <input type="email" name="email" class="w-full border rounded-md p-3" placeholder="Your email (optional)">
+
+              <input type="hidden" name="_subject" value="Low Rating Feedback" />
+              <input type="hidden" name="_template" value="table" />
+              <input type="hidden" name="_next" value="https://equimedia.github.io/thanks.html" />
+              <!-- Honeypot -->
+              <input type="text" name="_honey" style="display:none" />
+
+              <button type="submit" class="w-full bg-rose-500 hover:bg-rose-600 text-white font-semibold py-3 rounded-lg transition active:scale-95">Send Feedback</button>
+
+              <p id="msg" class="text-center text-sm text-slate-500"></p>
+          </form>
+      </div>
   </div>
 
-  <!-- ─────────── Low‑rating modal ─────────── -->
-  <div id="modalBad" class="modal hidden">
-    <div class="bg-white rounded-xl shadow-lg w-full max-w-lg p-8 relative">
-      <button data-close class="absolute top-2 right-3 text-2xl font-light text-gray-400 hover:text-gray-600">&times;</button>
-
-      <h2 class="text-xl font-semibold text-center text-rose-600 mb-2">We’re sorry! 😔</h2>
-      <p class="text-center text-gray-600 mb-6">Please tell us what went wrong – your feedback goes straight to management.</p>
-
-      <form id="feedbackForm" action="https://formsubmit.co/equimedia3@gmail.com" method="POST" class="space-y-4">
-        <textarea name="message" rows="5" class="w-full border border-gray-300 rounded-lg p-3 focus:ring-1 focus:ring-rose-400 focus:outline-none resize-y" placeholder="Your feedback helps us improve…"></textarea>
-
-        <input type="email" name="email" placeholder="Your email (optional)" class="w-full border border-gray-300 rounded-lg p-3 focus:ring-1 focus:ring-rose-400 focus:outline-none" />
-
-        <!-- FormSubmit helpers -->
-        <input type="hidden" name="_subject" value="Low‑Rating Feedback" />
-        <input type="hidden" name="_template" value="table" />
-        <!-- optional thank‑you page -->
-        <input type="hidden" name="_next" value="https://yourdomain.com/thanks.html" />
-
-        <!-- bot trap – leave blank! -->
-        <input type="text" name="_honey" class="hidden" />
-
-        <button type="submit" class="w-full bg-rose-500 hover:bg-rose-600 text-white font-medium py-3 rounded-lg active:scale-95 transition transform">Send feedback privately</button>
-
-        <p id="statusMsg" class="text-center text-sm text-gray-500"></p>
-      </form>
-    </div>
-  </div>
-
-  <!-- ─────────── JavaScript ─────────── -->
   <script>
-    /* ----- refs */
-    const starGroup = document.getElementById('starGroup');
-    const modalGood = document.getElementById('modalGood');
-    const modalBad  = document.getElementById('modalBad');
+  const selector = document.getElementById('selector');
+  const goodModal = document.getElementById('goodModal');
+  const badModal  = document.getElementById('badModal');
 
-    /* open proper modal depending on rating */
-    starGroup.addEventListener('change', (e) => {
-      const val = +e.target.value || 0;
-      (val >= 4 ? modalGood : modalBad).classList.remove('hidden');
-    });
+  selector.addEventListener('change', e => {
+      const val = +e.target.value;
+      (val < 4 ? badModal : goodModal).classList.remove('hidden');
+  });
 
-    /* close buttons */
-    document.querySelectorAll('[data-close]').forEach(btn => {
-      btn.addEventListener('click', () => btn.closest('.modal').classList.add('hidden'));
-    });
+  document.querySelectorAll('[data-close]').forEach(btn => btn.addEventListener('click', () => btn.closest('.backdrop').classList.add('hidden')));
 
-    /* simple front‑end validation + UX */
-    const fForm = document.getElementById('feedbackForm');
-    const sMsg  = document.getElementById('statusMsg');
-
-    fForm.addEventListener('submit', (ev) => {
-      if (!fForm.message.value.trim()) {
-        ev.preventDefault();
-        sMsg.textContent = 'Please write a short message before submitting.';
+  // simple front validation
+  const f = document.getElementById('fbForm');
+  const m = document.getElementById('msg');
+  f.addEventListener('submit', ev => {
+      if (!f.message.value.trim()) {
+          ev.preventDefault();
+          m.textContent = 'Please write a quick message.';
       } else {
-        sMsg.textContent = 'Sending…';
+          m.textContent = 'Sending...';
       }
-    });
+  });
   </script>
 </body>
 </html>
