--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <input type="email" name="email" class="w-full border rounded-md p-3" placeholder="Your email (optional)">
               <input type="hidden" name="_subject" value="Low Rating Feedback" />
               <input type="hidden" name="_template" value="table" />
-              <input type="hidden" name="_next" value="https://nexbiz.ratemybiz.in.net/thank.html" />
+              <input type="hidden" name="_next" value="https://nexbiz.ratemybiz.in.net/thanks.html" />
               <input type="hidden" name="_captcha" value="false" />
               <input type="text" name="_honey" style="display:none" />
               <button type="submit" class="w-full bg-rose-500 hover:bg-rose-600 text-white font-semibold py-3 rounded-lg transition active:scale-95">Send Feedback</button>
