--- a/index.html
+++ b/index.html
@@ -8,38 +8,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     body{font-family:'Inter',sans-serif;}
-    .glassy{backdrop-filter:blur(14px) saturate(160%);background:rgba(255,255,255,.55);border:1px solid rgba(255,255,255,.3);}
-    /* modal backdrop */
-    .backdrop{position:fixed;inset:0;background:rgba(0,0,0,.6);display:flex;align-items:center;justify-content:center;z-index:50;}
-    .hidden{display:none;}
-    /* icon button */
-    .cta{transition:transform .2s;}
-    .cta:hover{transform:translateY(-2px);}
+    .glassy{backdrop-filter:blur(14px) saturate(160%);background:rgba(255,255,255,.55);border:1px solid rgba(255,255,255,.3);}/*modal*/.backdrop{position:fixed;inset:0;background:rgba(0,0,0,.6);display:flex;align-items:center;justify-content:center;z-index:50}.hidden{display:none}.cta{transition:transform .2s}.cta:hover{transform:translateY(-2px)}
   </style>
 </head>
 <body class="min-h-screen flex items-center justify-center bg-gradient-to-br from-emerald-100 via-sky-100 to-indigo-100 p-4">
-
   <!-- ===== Card ===== -->
   <div class="glassy rounded-2xl shadow-2xl w-full max-w-xl p-10 text-center relative overflow-hidden">
     <!-- decorative burst -->
     <div class="absolute -top-10 -right-10 w-52 h-52 bg-gradient-to-br from-indigo-300 via-sky-300 to-emerald-300 opacity-20 rounded-full blur-3xl"></div>
 
-    <svg xmlns="http://www.w3.org/2000/svg" class="w-16 h-16 text-amber-400 mx-auto mb-4" viewBox="0 0 24 24" fill="currentColor"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
+    <!-- Namaskar icon -->
+    <div class="text-7xl mb-4 select-none">🙏</div>
 
     <h1 class="text-3xl font-bold mb-2 text-slate-800">We value every experience</h1>
-    <p class="text-slate-600 mb-8 max-w-md mx-auto">If you loved us, let the world know!
-       Not completely satisfied? <span class="font-semibold text-slate-700">We’re ready to support you until you are.</span></p>
+    <p class="text-slate-600 mb-8 max-w-md mx-auto">If you loved us, let the world know! Not completely satisfied? <span class="font-semibold text-slate-700">We’re ready to support you until you are.</span></p>
 
     <div class="grid sm:grid-cols-2 gap-6">
       <!-- Google CTA -->
-      <a href="https://search.google.com/local/writereview?placeid=ChIJ1b_GBgC3wjsR9t-a4dIKlI4" target="_blank" rel="noopener noreferrer"
-         class="cta flex flex-col items-center justify-center rounded-xl bg-gradient-to-br from-amber-400 to-amber-500 text-white py-6 px-4 shadow-lg hover:shadow-xl">
+      <a href="https://search.google.com/local/writereview?placeid=ChIJ1b_GBgC3wjsR9t-a4dIKlI4" target="_blank" rel="noopener noreferrer" class="cta flex flex-col items-center justify-center rounded-xl bg-gradient-to-br from-amber-400 to-amber-500 text-white py-6 px-4 shadow-lg hover:shadow-xl">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9 mb-2" viewBox="0 0 48 48"><path fill="#FFC107" d="M43.6 20.5H42V20H24v8h11.3C34.1 32.3 29.7 35 24 35c-7.2 0-13-5.8-13-13s5.8-13 13-13c3.3 0 6.2 1.2 8.5 3.2l6-6C34.5 2.9 29.6 1 24 1 11.8 1 2 10.8 2 23s9.8 22 22 22 22-9.8 22-22c0-1.4-.1-2.6-.4-3.9z"/><path fill="#FF3D00" d="M6.3 14.1l6.6 4.8C14.6 15.3 18.9 13 24 13c3.3 0 6.2 1.2 8.5 3.2l6-6C34.5 2.9 29.6 1 24 1 15 1 7.2 6.2 3.6 14.1z"/><path fill="#4CAF50" d="M24 45c5.5 0 10.5-1.9 14.3-5.1l-6.6-5.4C29.6 35.7 26.9 37 24 37c-5.6 0-10.3-3.8-12-9l-6.6 5.1C8.4 40.4 15.6 45 24 45z"/><path fill="#1976D2" d="M43.6 20.5H42V20H24v8h11.3c-1.7 4.3-6.4 7-11.3 7-5.6 0-10.3-3.8-12-9l-6.6 5.1C8.4 40.4 15.6 45 24 45c11.2 0 20-9.1 20-22 0-1.4-.1-2.6-.4-3.9z"/></svg>
         <span class="font-semibold text-lg">Leave a Google review</span>
         <span class="text-xs opacity-80 mt-1">Public & visible to everyone</span>
       </a>
 
-      <!-- Support CTA (opens modal) -->
+      <!-- Support CTA -->
       <button id="openModal" class="cta flex flex-col items-center justify-center rounded-xl bg-gradient-to-br from-slate-700 to-slate-800 text-white py-6 px-4 shadow-lg hover:shadow-xl focus:outline-none">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9 mb-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M17 8h2a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2v-8a2 2 0 012-2h2m10-4H9a2 2 0 00-2 2v2h12V6a2 2 0 00-2-2z" /></svg>
         <span class="font-semibold text-lg">Need help? Tell us</span>
@@ -54,38 +46,25 @@
       <button class="absolute top-3 right-4 text-2xl text-slate-500 hover:text-slate-700" data-close>&times;</button>
       <h2 class="text-2xl font-semibold text-slate-800 mb-1">We’re here to help</h2>
       <p class="text-slate-600 mb-5">Share anything that didn’t go perfectly & we’ll reach out.</p>
-
       <form id="fbForm" action="https://formsubmit.co/equimedia3@gmail.com" method="POST" class="space-y-4">
         <textarea name="message" rows="5" class="w-full rounded-lg border border-slate-300 p-3 focus:outline-none focus:ring-2 focus:ring-emerald-400" placeholder="Your feedback..."></textarea>
         <input type="email" name="email" class="w-full rounded-lg border border-slate-300 p-3" placeholder="Email (optional, for follow‑up)">
-
-        <!-- helpers -->
         <input type="hidden" name="_subject" value="Private Feedback" />
         <input type="hidden" name="_template" value="table" />
         <input type="hidden" name="_next" value="https://nexbiz.ratemybiz.in.net/thank.html" />
-        <!-- CAPTCHA disabled per request -->
         <input type="hidden" name="_captcha" value="false" />
-        <!-- honeypot -->
         <input type="text" name="_honey" style="display:none" />
-
         <button type="submit" class="w-full py-3 rounded-lg bg-emerald-500 hover:bg-emerald-600 text-white font-semibold transition active:scale-95">Send feedback securely</button>
       </form>
     </div>
   </div>
 
   <script>
-    const openModal  = document.getElementById('openModal');
-    const modal      = document.getElementById('feedbackModal');
-    const closeBtns  = modal.querySelectorAll('[data-close]');
-
-    openModal.onclick = () => modal.classList.remove('hidden');
-    closeBtns.forEach(btn => btn.onclick = () => modal.classList.add('hidden'));
-
-    // optional simple submit message
-    const fbForm = document.getElementById('fbForm');
-    fbForm.addEventListener('submit', () => {
-      openModal.disabled = true;
-    });
+    const openModal=document.getElementById('openModal');
+    const modal=document.getElementById('feedbackModal');
+    modal.querySelectorAll('[data-close]').forEach(btn=>btn.onclick=()=>modal.classList.add('hidden'));
+    openModal.onclick=()=>modal.classList.remove('hidden');
+    document.getElementById('fbForm').addEventListener('submit',()=>{openModal.disabled=true});
   </script>
 </body>
 </html>
