--- a/thank.html
+++ b/thank.html
@@ -2,18 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Thank You!</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Thank You!</title>
+
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <style>body{font-family:'Inter',sans-serif;}</style>
+
+  <style>
+    body       {font-family:'Inter',sans-serif;}
+    /* fade‑in motion */
+    .reveal    {opacity:0;transform:translateY(12px);transition:all .5s ease}
+    .loaded .reveal{opacity:1;transform:none}
+  </style>
 </head>
-<body class="bg-emerald-50 flex items-center justify-center min-h-screen p-4">
-  <div class="bg-white p-10 rounded-xl shadow-lg text-center max-w-md w-full">
-    <svg xmlns="http://www.w3.org/2000/svg" class="w-16 h-16 text-emerald-500 mx-auto mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-    <h1 class="text-2xl font-semibold text-emerald-600 mb-2">Thank you for your feedback!</h1>
-    <p class="text-slate-600 mb-6">We appreciate you taking the time to help us improve.</p>
-    <a href="/" class="inline-block bg-emerald-500 hover:bg-emerald-600 text-white px-6 py-3 rounded-lg font-semibold transition">Back to Home</a>
-  </div>
+
+<body class="min-h-screen flex items-center justify-center p-6 bg-gradient-to-br from-emerald-100 via-teal-100 to-sky-100">
+
+  <!-- glass card -->
+  <main class="reveal w-full max-w-md rounded-3xl border border-white/30 bg-white/40 backdrop-blur-md shadow-xl px-10 py-12 text-center">
+
+    <!-- icon -->
+    <div class="w-20 h-20 mx-auto mb-6 rounded-full bg-emerald-500 flex items-center justify-center shadow-lg shadow-emerald-400/40">
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+    </div>
+
+    <!-- copy -->
+    <h1 class="text-3xl font-extrabold text-emerald-700 mb-3">Thank you for your feedback!</h1>
+    <p class="text-slate-600 mb-8 leading-relaxed">
+      We truly appreciate you taking the time to help us improve.
+      <br class="hidden sm:inline">Our team reads every message.
+    </p>
+
+    <!-- CTA -->
+    <a href="/" class="inline-block bg-gradient-to-r from-emerald-500 to-emerald-600 hover:from-emerald-600 hover:to-emerald-700 text-white px-8 py-3 rounded-full font-semibold shadow-md shadow-emerald-500/30 active:scale-95 transition">
+      Back&nbsp;to&nbsp;Home
+    </a>
+  </main>
+
+  <script>
+    /* trigger reveal once page is loaded */
+    window.addEventListener('load',()=>document.body.classList.add('loaded'));
+  </script>
 </body>
 </html>
